--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -1,104 +1,96 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Nuclearflames</title>
-	<%= javascript_include_tag :all %>
-	<%= stylesheet_link_tag "application" %>
-<%= javascript_include_tag "application", "http://cdn.sublimevideo.net/js/3s7oes9q.js" %>
-    <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB3gx_9qaR1qczUh-vHg35EhzDYTtfwfNs&sensor=true">
-    </script>
-    
-	<% if current_user %>
-	<style type="text/css">
-	a,p,u,td {font-size: <%= current_user.size %>px; color:<%= current_user.color %>;font-family:<%= current_user.font %>; Arial, Comic Sans MS; }
-	</style>
-	<% end %>
-	<%= yield(:calendar) %>
-	<%= yield(:maps) %>
-	<%= csrf_meta_tag %>
-<noscript>Please enable javascript to use this website fully</noscript>
-</head>
-<body onload="initialize()">
-	<div id="header">
-		<span id="home">
-		<% if !current_user %>
-			<%= link_to "Home", :controller => "home", :action => "index" %> | 
-		<% else %>
-		<%= link_to "Home", :controller => "home", :action => "home" %> | 
-		<% end %>
-		<%= link_to "Forum", :controller => "topics", :action => "topicsList" %> |
-		<span onclick="goBackHistory()"><u>Go Back to Last Page</u></span>
-		</span>
-		<span id="notice">
-			<%= notice %>
-		</span>
-		<span id="loggedin">
+	<head>
+		<title>Nuclearflames</title>
+		<%= javascript_include_tag :all %>
+		<%= stylesheet_link_tag "application" %>
+		<%= javascript_include_tag "application", "http://cdn.sublimevideo.net/js/3s7oes9q.js" %>
+		<script type="text/javascript"
+		src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB3gx_9qaR1qczUh-vHg35EhzDYTtfwfNs&sensor=true">
+		</script>
+	    
 		<% if current_user %>
-			You are logged in as: <%= link_to(current_user.name + " " + current_user.surname, user_path(current_user.id)) %><br />
-			<span id="logOff">Click here to <%= link_to('Logoff', '../../../logout' )%> 
-			<%=h image_tag current_user.photo.url(:thumb), :id=>"profilePic" %></span>
-		<% else %>
-			You are not logged in, <%= link_to "Log in", "../../../login" %> or  <%= link_to('Signup', '../../../users/new') %>
+			<style type="text/css">
+			a,p,u,td {font-size: <%= current_user.size %>px; color:<%= current_user.color %>;font-family:<%= current_user.font %>; Arial, Comic Sans MS; }
+			</style>
 		<% end %>
-		</span>
-	</div>
-	<!--
-	<div class="mainMenu">
-	  <ul>
-	    <li>
-	      <a href="">
-		<span>Home</span>
-	      </a>
-	    </li>
-	    <li>
-	      <a href="">
-		<span>Valid CSS</span>
-	      </a>
-	    </li>
-	    <li>
-	      <a href="">
-		<%=h image_tag "homeLink2.png" %>
-		<span>Valid CSS</span>
-	      </a>
-	    </li>
-	    <li>
-	      <a href="">
-		<%=h image_tag "homeLink.png" %>
-		<span>Valid CSS</span>
-	      </a>
-	    </li>
-	    <li>
-	      <a href="">
-		<%=h image_tag "homeLink.png" %>
-		<span>Valid CSS</span>
-	      </a>
-	    </li>
-	    <li>
-	      <a href="">
-		<%=h image_tag "homeLink.png" %>
-		<span>Valid CSS</span>
-	      </a>
-	    </li>
-	  </ul>
-	</div>
-	-->
-	
-	<div id="content">
-		<div id="mainContent">
-
-		<%= yield %>
-
+		<%= yield(:calendar) %>
+		<%= yield(:maps) %>
+		<%= csrf_meta_tag %>
+		<noscript>Please enable javascript to use this website fully</noscript>
+	</head>
+	<body onload="initialize()">
+		<div id="header">
+			<span id="home">
+			<% if !current_user %>
+				<%= link_to "Home", :controller => "home", :action => "index" %> | 
+			<% else %>
+			<%= link_to "Home", :controller => "home", :action => "home" %> | 
+			<% end %>
+			<%= link_to "Forum", :controller => "topics", :action => "topicsList" %> |
+			<span onclick="goBackHistory()"><u>Go Back to Last Page</u></span>
+			</span>
+			<span id="notice">
+				<%= notice %>
+			</span>
+			<span id="loggedin">
+			<% if current_user %>
+				You are logged in as: <%= link_to(current_user.name + " " + current_user.surname, user_path(current_user.id)) %><br />
+				<span id="logOff">Click here to <%= link_to('Logoff', '../../../logout' )%> 
+				<%=h image_tag current_user.photo.url(:thumb), :id=>"profilePic" %></span>
+			<% else %>
+				You are not logged in, <%= link_to "Log in", "../../../login" %> or  <%= link_to('Signup', '../../../users/new') %>
+			<% end %>
+			</span>
 		</div>
-	</div>
-	<div id="disclaimer">
-		<p>
-		Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
-		<br />
-			By using this website you also agree that any data given and stored by the website is done so at your consent and at your own risk.
-		<br />
-			This website is in development so please bare with me as new content will be added to this website!!
-		</p>
-	</div>
+		
+		<div id="content">
+			<div id="mainContent">
+
+			<%= yield %>
+
+		
+			<% if current_user && current_user.status == 'Administrator' %>
+				<div id="administrator">
+					<table>
+						<tr>
+							<td><b>Admin actions:</b></td>
+						</tr>
+						<tr>
+							<td><%= link_to "Create a new profile", :controller => 'users', :action => 'new' %></td>
+						</tr>
+						<tr>
+							<td><%= link_to "View all profiles", :controller => 'users', :action => 'index' %></td>
+						</tr>
+						<tr>
+							<td><%= link_to "View all Stored data", :controller => 'storages', :action => 'index' %></td>
+						</tr>
+						<tr>
+							<td>User Created: <%= current_user.created_at %></td>
+						</tr>
+						<tr>
+							<td>User ID: <%= current_user.id %></td>
+						</tr>
+						<tr>
+							<td>User Status: <%= current_user.status %></td>
+						</tr>
+						<tr>
+							<td>User Rank: <%= current_user.rank %></td>
+						</tr>
+					</table>
+				</div>
+			<% end %>
+			
+			</div>
+		</div>
+		<div id="disclaimer">
+			<p>
+			Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
+			<br />
+				By using this website you also agree that any data given and stored by the website is done so at your consent and at your own risk.
+			<br />			
+				This website is in development so please bare with me as new content will be added to this website!!
+			</p>
+		</div>
 	</body>
 </html>
