--- a/app/views/threds/show.html.erb
+++ b/app/views/threds/show.html.erb
@@ -1,40 +1,36 @@
-<h1>
-Posts about <%=h @thred.title %>:
-</h1>
-<p>
-  <b>Thread Creator:</b>
-  <%= link_to @thred.user_id, user_path(@thred.user_id) %>
-  <br />
-  <b>Post description:</b>
-  <%= @thred.description %>
-  </p>
+<h3>
+	<%= @thred.description %>
+</h3>
 <table id ="form">
 	<tr>
-		<th colspan="2">
-		Description:
+		<th>
 		</th>
-		<th colspan="2">
-		Options
+		<th>
+			<span>Posts:</span>
+		</th>
+		<th style="width:50px">
+			Options
 		</th>
 	</tr>
 <% @posts.each do |posts| %>
 	<tr>
 		<td width="30px">
-		<%= posts.id %>
+			<%= link_to GetUser(posts.user_id).name, user_path(posts.user_id) %>
 		</td>
 		<td>
-		<u><%=h link_to posts.title, post_path(posts.id) %></u><br />
-		<%=h posts.description %>
+			<span class="created_at"> 
+				Created at:
+				<%=h posts.created_at %>
+			</span>
+			<br />
+			<%=h posts.description %>
 		</td>
-		<td width="50pxs">
-		<%= link_to 'Owner', user_path(posts.user_id) %>
-		</td>
-		<% if posts.user_id == session[:id] %>
-		<td width="120px">
-		<%=h link_to 'Edit your Post', edit_post_path(posts.id) %>
-		<br />
-		<%= link_to 'Delete your Post', posts, :confirm => 'Are you sure?', :method => :delete %>
-		</td>
+		<% if posts.user_id == current_user.id %>
+			<td width="60px">
+			<%=h link_to 'Edit', edit_post_path(posts.id) %>
+			<br />
+			<%= link_to 'Delete', posts, :confirm => 'Are you sure?', :method => :delete %>
+			</td>
 		<% end %>
 	<tr id="spacer">
 	</tr>
@@ -42,27 +38,7 @@ Posts about <%=h @thred.title %>:
 </table>
 
 <div id="newPost">
-<% if current_user %>
-<%= link_to 'Create new Post', new_post_path %></td>
-<!--
-<%= render 'posts/form' %>
--->
-<% end %>
-</div>
-<div id="description">
-<p>
-  <b>Title:</b>
-  <%= @thred.title %>
-  <br />
-  <b>Topic ID:</b>
-  <%= @thred.topic_id %>
-  <br />
-  <b>Thread owner:</b>
-  <%= link_to @thred.user_id, user_path(@thred.user_id) %>
-
-</p>
-
-<%= link_to 'Edit', edit_thred_path(@thred) %> |
-<%= link_to 'Back', topic_path(@thred.topic_id) %>
-
+	<% if current_user %>
+		<%= render 'posts/form' %>
+	<% end %>
 </div>
