--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -3,7 +3,7 @@
 	<head>
 		<title>Nuclearflames</title>
 		<%= javascript_include_tag :all %>
-		<%= stylesheet_link_tag "application" %>
+		<%= stylesheet_link_tag "designs.css" %>
 		<script type="text/javascript"
 		src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB3gx_9qaR1qczUh-vHg35EhzDYTtfwfNs&sensor=true">
 		</script>
