added layout feature and fixed forum glitch

--- a/app/assets/stylesheets/designs.css.erb
+++ b/app/assets/stylesheets/designs.css.erb
@@ -461,3 +461,15 @@ div.field, div.actions {
 	left:425px;
 	top:25px;
 }
+
+#timeline {
+	position:absolute;
+	left:25px;
+	width:400px;
+}
+
+#storage {
+	position:absolute;
+	top:25px;
+	left:400px;"
+}
