re-edited glitched forum

--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -2,7 +2,7 @@
 	<head>
 		<title>Nuclearflames</title>
 		<%= stylesheet_link_tag "application", :media => "all" %>
-		<%= javascript_include_tag :all %>
+-		<%= javascript_include_tag "application" %>
 		<script type="text/javascript"
 		src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB3gx_9qaR1qczUh-vHg35EhzDYTtfwfNs&amp;sensor=true">
 		</script>
